[package]
name = "zyrixo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zyrixo"
path = "src/main.rs"

[dependencies]
aws-sdk-s3 = "1.57.0" # For interacting with S3
aws-sdk-iam = "1.48.0" # For IAM role checks
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-cloudtrail = "1.49.0"
aws-types = "1.3.3" # For Region Handling
tokio = { version = "1.0", features = ["full"] } # Async runtime
serde_json = "1.0"  # For handling JSON (optional for later)
serde = { version = "1.0", features = ["derive"] }

[profile.release]
panic = "abort"
